--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "drizzle-kit": "^0.31.9",
     "eslint": "^9",
     "eslint-config-next": "16.1.6",
+    "lefthook": "^2.1.1",
     "tailwindcss": "^4",
     "typescript": "^5"
   },
