--- a/package.json
+++ b/package.json
@@ -21,11 +21,13 @@
     "jotai": "^2.18.0",
     "lucide-react": "^0.574.0",
     "next": "16.1.6",
+    "next-pwa": "^5.6.0",
     "react": "19.2.3",
     "react-dom": "19.2.3"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
+    "@types/minimatch": "^6.0.0",
     "@types/node": "^20",
     "@types/pg": "^8.16.0",
     "@types/react": "^19",
@@ -34,6 +36,7 @@
     "eslint": "^9",
     "eslint-config-next": "16.1.6",
     "lefthook": "^2.1.1",
+    "sharp": "^0.34.5",
     "tailwindcss": "^4",
     "typescript": "^5"
   },
