--- a/public/manifest.json
+++ b/public/manifest.json
@@ -4,22 +4,22 @@
   "description": "Xem phim online chất lượng cao",
   "start_url": "/",
   "display": "standalone",
-  "background_color": "#000000",
+  "background_color": "#0d0d0d",
   "theme_color": "#E50914",
   "orientation": "portrait-primary",
   "icons": [
     {
-      "src": "/icons/icon-192.png?v=3",
+      "src": "/icons/icon-192.png?v=4",
       "sizes": "192x192",
       "type": "image/png"
     },
     {
-      "src": "/icons/icon-512.png?v=3",
+      "src": "/icons/icon-512.png?v=4",
       "sizes": "512x512",
       "type": "image/png"
     },
     {
-      "src": "/icons/icon-maskable-512.png?v=3",
+      "src": "/icons/icon-maskable-512.png?v=4",
       "sizes": "512x512",
       "type": "image/png",
       "purpose": "maskable"
